--- a/wp-content/themes/html5blank-stable3-child/style.css
+++ b/wp-content/themes/html5blank-stable3-child/style.css
@@ -11,3 +11,15 @@
 	License: MIT
 	License URI: http://opensource.org/licenses/mit-license.php
 */
+
+
+
+
+.footer {
+    background-color: #000;
+		width: 100%;
+}
+
+.hr{
+	/*background-color: #303030;*/
+}
