did stuff today

--- a/wp-content/themes/html5blank-stable3-child/style.css
+++ b/wp-content/themes/html5blank-stable3-child/style.css
@@ -47,10 +47,17 @@ body {
 /* end of reset */
 
 .page .hero__image{
-  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
-  url("./img/sunset.jpg");
-  background-position: 50% 50%;
-  min-height: 300px;
+  background: linear-gradient(rgba(0, 0, 0, 0.03), rgba(0, 0, 0, 0.03)),
+  url("./img/lights.jpg")no-repeat;
+  background-position: 17% 54%;
+  min-height: 0px;
+  height: 200px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.page .hero__image .brush__stroke{
+  top:10px;
 }
 
 @font-face {
@@ -131,7 +138,7 @@ body {
 .self {
   background: url("./img/flowerwatercolorbackground.svg") no-repeat;
   background-position: 50% 50%;
-  padding: 75px 0;
+  padding: 145px 0;
   margin: 0 60px;
 }
 
@@ -236,6 +243,27 @@ a.button.product_type_simple.add_to_cart_button.ajax_add_to_cart{
 }
 
 /* end of sanity section */
+
+/* sparkle */
+
+.sparkle__brushstroke{
+  background: url('./img/greenpaintbrush.svg') no-repeat;
+  width:500px;
+  height: 200px;
+  position: relative;
+  left: 400px;
+
+}
+
+.sparkle__brushstroke h1{
+  font-family: magnolia_sky;
+  font-size: 72px;
+  color: #202049;
+  position: relative;
+  top: 60px;
+  left: 140px;
+}
+/* end of sparkle */
 
 
 .footer {
